[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stlbs"
version = "1.0.0"
description = "A datatype to make using stones and pounds easier"
readme = "README.md"
authors = [{name = "Rich Cairns", email = "richard.a.cairnsNOSPAM@gmail.com"}]
license = { file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["weight", "mass", "stones", "pounds", "lbs", "stones and pounds"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["bumpver", "black", "pytest"]

[project.urls]
Homepage = "https://github.com/rogfrich/stlbs"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]


